--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~12.2.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "ngx-toastr": "^14.1.3",
+    "primeicons": "^5.0.0",
+    "primeng": "^12.2.3",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.7",
     "toastr": "^2.1.4",
