--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "ngx-socket-io": "^4.1.0",
     "ngx-toastr": "^14.1.3",
+    "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
     "primeng": "^12.2.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.7",
     "toastr": "^2.1.4",
