--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "ngx-extended-pdf-viewer": "^17.4.6",
     "ngx-socket-io": "^4.1.0",
     "ngx-toastr": "^14.1.3",
+    "pdfmake": "^0.1.72",
+    "pdfmake-wrapper": "^2.1.3",
     "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
     "primeng": "^12.2.3",
     "quill": "^1.3.7",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "sweetalert2": "^11.1.7",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
@@ -39,6 +42,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
