--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.7",
+    "@angular/animations": "^13.4.0",
     "@angular/cdk": "^12.2.7",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
+    "@angular/common": "~13.4.0",
+    "@angular/compiler": "~13.4.0",
+    "@angular/core": "~13.4.0",
+    "@angular/forms": "~13.4.0",
     "@angular/material": "^12.2.7",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/platform-browser": "~13.4.0",
+    "@angular/platform-browser-dynamic": "~13.4.0",
+    "@angular/router": "~13.4.0",
     "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "ngx-extended-pdf-viewer": "^17.4.6",
-    "ngx-socket-io": "^4.1.0",
+    "ngx-socket-io": "^4.2.0",
     "ngx-toastr": "^14.1.3",
     "pdfmake": "^0.1.72",
     "pdfmake-wrapper": "^2.1.3",
     "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
-    "primeng": "^12.2.3",
+    "primeng": "^13.4.1",
     "quill": "^1.3.7",
-    "rxjs": "^6.6.7",
+    "rxjs": "7.4",
     "sweetalert2": "^11.1.7",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.6",
-    "@angular/cli": "~12.2.6",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "~13.3.11",
+    "@angular/cli": "~13.3.11",
+    "@angular/compiler-cli": "~13.4.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/pdfmake": "^0.2.2",
@@ -49,6 +49,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   }
 }
